# C-project

./: .gitignore  CMakeLists.txt  README.md  main.c
docs/: index.md
include/: admin.h  app.h  customer.h  discount.h  ui.h
src/: admin.c  app.c  customer.c  discount.c  storage.c  ui.c
